# Flash

./: .gitignore  CMakeLists.txt
include/Renderer/: Camera.hpp  PointLight.hpp  Scene.hpp
include/image/: PPMImage.h
include/physics/: Collider.h  Material.hpp  Plane.hpp  Ray.h  Sphere.hpp
include/physics/materials/: Material.hpp  PhongMaterial.h
include/utils/: Color.h  Vector3.h  Vectors.h  Vectors.inl  maths.hpp
src/: main.cpp
src/Renderer/: Camera.cpp  PointLight.cpp  Scene.cpp
src/image/: PPMImage.cpp
src/physics/: Collider.cpp  Material.cpp  Plane.cpp  Ray.cpp  Sphere.cpp
src/physics/materials/: PhongMaterial.cpp
src/utils/: Color.cpp
tests/: CMakeLists.txt  test.cpp
tests/helpers/: Constants.h  RandomVectorGenerator.cpp  RandomVectorGenerator.h
